--- a/src/components/diaries/styles.module.css
+++ b/src/components/diaries/styles.module.css
@@ -40,7 +40,6 @@
 
 .dropdown {
   position: relative;
-  z-index: 1;
 }
 
 .filterSelect {
